<resources>
    <string name="app_name">MyLibrary</string>
    <string name="action_settings">Settings</string>
    <string name="btn_image">Image</string>
    <string name="btn_Video">Video</string>
    <string name="btn_audio">Audio</string>
    <string name="captured">Captured</string>
    <string name="gallery">Gallery</string>
    <string name="capture">Capture</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="btn_clear">Clear</string>
    <string name="all">All</string>
    <string name="select">Select</string>
    <string name="native_gallery">NativeGallery</string>
</resources>
