<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/fragment_menu_dialog_rbCapture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capture" />

        <RadioButton
            android:id="@+id/fragment_menu_dialog_rbGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery" />

        <RadioButton
            android:id="@+id/fragment_menu_dialog_rbNativeGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/native_gallery" />
    </RadioGroup>
</RelativeLayout>
