<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10">

    <Button
        android:id="@+id/fragment_option_btnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/dimen_15"
        android:text="@string/btn_image" />

    <Button
        android:id="@+id/fragment_option_btnVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/dimen_15"
        android:layout_toRightOf="@+id/fragment_option_btnImage"
        android:text="@string/btn_Video" />

    <Button
        android:id="@+id/fragment_option_btnAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/fragment_option_btnVideo"
        android:text="@string/btn_audio" />
</RelativeLayout>