<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/fragment_capture_aud_btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/fragment_capture_aud_btnStop"
        android:text="@string/record" />

    <Button
        android:id="@+id/fragment_capture_aud_btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fragment_capture_aud_btnPlay"
        android:layout_centerHorizontal="true"
        android:text="@string/stop" />

    <Button
        android:id="@+id/fragment_capture_aud_btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/play" />
</RelativeLayout>