<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/fragment_imgage_gallery_btn_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/select" />

    <Button
        android:id="@+id/fragment_image_gallery_btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/fragment_imgage_gallery_btn_select"
        android:text="@string/btn_clear" />

    <Button
        android:id="@+id/fragment_image_gallery_btn_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/fragment_image_gallery_btn_clear"
        android:text="@string/all" />

    <GridView
        android:id="@+id/fragment_image_gallery_gv_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fragment_imgage_gallery_btn_select"
        android:columnWidth="@dimen/dimen_90"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />
</RelativeLayout>
